--- a/app/sass/components/_general.sass
+++ b/app/sass/components/_general.sass
@@ -117,38 +117,50 @@ ul
   //width: 40%
   height: 276px
   float: left
+  .img-responsive
+    +max-width-968
+      min-width: 150%
+  +max-width-968
+    width: 285px
+    height: 212px
   +max-width-992
     margin: 10px
   +max-width-768
-    width: 303px
-    height: 212px
+    //width: 303px
+    //height: 212px
   +max-width-480
-    width: 285px
-    height: 200px
+    //width: 285px
+    //height: 200px
 .grid-type-1__item--width-2
   width: 285px
   //width: 30%
 .grid-type-1__item--width-4
   width: 571px
   //width: 60%
-  +max-width-768
-    width: 300px
-  +max-width-480
+  +max-width-968
     width: 285px
+  +max-width-768
+    //width: 300px
+  +max-width-480
+    //width: 285px
 .grid-type-1__item--height2
   height: 212px
 .grid-type-1__item--height3
   height: 231px
+  +max-width-968
+    height: 212px
   +max-width-768
-    height: 178px
+    //height: 178px
   +max-width-480
-    height: 166px
+    //height: 166px
 .grid-type-1__item--height4
   height: 295px
+  +max-width-968
+    height: 212px
   +max-width-768
-    height: 155px
+    //height: 155px
   +max-width-480
-    height: 147px
+    //height: 147px
 //        End masonry grid type 1
 
 //        Start masonry grid type 2
