--- a/app/sass/components/_media.sass
+++ b/app/sass/components/_media.sass
@@ -9,6 +9,10 @@
 =max-width-992
   @media screen and (max-width: 992px)
     @content
+    @content
+=max-width-968
+  @media screen and (max-width: 968px)
+    @content
 =max-width-768
   @media screen and (max-width: 768px)
     @content
