--- a/app/sass/home-page/_video.sass
+++ b/app/sass/home-page/_video.sass
@@ -25,6 +25,8 @@
   flex-wrap: wrap
   +max-width-1128
     justify-content: center
+  +max-width-480
+    padding: 0 17px
 .video-list__item
   position: relative
   line-height: 0
